--- a/src/server/package.json
+++ b/src/server/package.json
@@ -4,8 +4,10 @@
   "description": "LimpaMais API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch index.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
