--- a/src/server/package.json
+++ b/src/server/package.json
@@ -23,6 +23,8 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "slonik": "^32.0.0"
   }
