chore(scripts): add no watch mode server runner

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "dev-no-watch":"node index.js"
   },
   "type": "module",
   "repository": {
