--- a/src/server/package.json
+++ b/src/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch index.js",
-    "dev-no-watch": "node index.js"
+    "dev": "nodemon index.js"
   },
   "type": "module",
   "repository": {
@@ -21,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8.27.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   },
   "dependencies": {
